Fixed Overflowing Calendar

--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -121,3 +121,9 @@ main {
   border-radius: 5px;
   background: #3b748a;
 }
+
+.time-picker {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
